# TNM094-SpelifieradBordtennis

./: .gitignore  InvaderSocket.js  client.js  getCoord.html  getCoords.html  index.html  package-lock.json  package.json  relay.js  test.js  testCoordinates.html  testNewGamemode1.html
AI/: all_pingpong_mfccs.csv  createmodelPeete  liveClassificationPeete.py  liveCoordinates.py  not_pingpong_mfccs.csv  playBackSound.py  random_forest_model.pkl  skapaMFCC.py
AI/implementation/: server.js  test.py
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
LJUDMULTILATERERING/: positionCalc.m  position_calculator.mlx
LitHesos/: Setup.m  positionCalc.m  position_calculator.mlx  sound_localization.mlapp
gamification/: SpaceInvaders.html  buffer.html  common.js  coordinate-bridge.js  credits.html  functions.js  game.js  gamemode1(old).html  gamemode1.html  gamemode2.html  index.html  leaderboard.css  leaderboard.html  style.css  testNewGamemode1.html  variables.js  writeToDB.html
gramods/gramods-forked/: .gitignore  CMakeLists(hugo old).txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  vcpkg.json
gramods/gramods-forked/apps/gm-load/: CMakeLists.txt
gramods/gramods-forked/modules/gmSound/: CMakeLists.txt
gramods/gramods.bin/include/gmCore/: config.hh  export.hh
gramods/gramods.bin/include/gmGraphics/: TextureInterface.hh  config.hh
gramods/gramods.bin/include/gmMisc/: config.hh
gramods/gramods.bin/lib/: gmCore.lib  gmGraphics.lib  gmMisc.lib  gmNetwork.lib  gmSound.lib  gmTouch.lib  gmTrack.lib
(+26 files in other folders)
